// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addTransactions 1`] = `
Object {
  "transactions": Array [],
  "type": "GIVE.ADD_TRANSACTION",
}
`;

exports[`clear 1`] = `
Object {
  "field": "firstName",
  "level": "personal",
  "type": "GIVE.REMOVE_DATA",
}
`;

exports[`clearAccount 1`] = `
Object {
  "savedAccount": "clear",
  "type": "GIVE.SET_SAVED_ACCOUNT",
}
`;

exports[`clearAllSchedulesExcept 1`] = `
Object {
  "id": 1,
  "type": "GIVE.CLEAR_SCHEDULES_EXCEPT",
}
`;

exports[`clearData 1`] = `
Object {
  "type": "GIVE.CLEAR_DATA",
}
`;

exports[`clearSchedule 1`] = `
Object {
  "field": 1,
  "type": "GIVE.REMOVE_SCHEDULE_DATA",
}
`;

exports[`clearTransaction 1`] = `
Object {
  "transactionId": 1,
  "type": "GIVE.CLEAR_TRANSACTION",
}
`;

exports[`deleteRecoverableSchedules 1`] = `
Object {
  "id": 1,
  "type": "GIVE.DELETE_RECOVERABLE_SCHEDULES",
}
`;

exports[`deleteSchedule 1`] = `
Object {
  "id": 1,
  "type": "GIVE.DELETE_RECOVERABLE_SCHEDULE",
}
`;

exports[`error 1`] = `
Object {
  "error": [Error],
  "type": "GIVE.SET_ERROR",
}
`;

exports[`fix 1`] = `
Object {
  "error": [Error],
  "type": "GIVE.REMOVE_ERROR",
}
`;

exports[`goes to next 1`] = `
Object {
  "increment": 1,
  "type": "GIVE.SET_PROGRESS",
}
`;

exports[`includes types in the export 1`] = `
Object {
  "ADD_TRANSACTION": "GIVE.ADD_TRANSACTION",
  "CLEAR_DATA": "GIVE.CLEAR_DATA",
  "CLEAR_SCHEDULES": "GIVE.CLEAR_SCHEDULES",
  "CLEAR_SCHEDULES_EXCEPT": "GIVE.CLEAR_SCHEDULES_EXCEPT",
  "CLEAR_TRANSACTION": "GIVE.CLEAR_TRANSACTION",
  "CLEAR_TRANSACTIONS": "GIVE.CLEAR_TRANSACTIONS",
  "DELETE_RECOVERABLE_SCHEDULE": "GIVE.DELETE_RECOVERABLE_SCHEDULE",
  "DELETE_RECOVERABLE_SCHEDULES": "GIVE.DELETE_RECOVERABLE_SCHEDULES",
  "REMOVE_DATA": "GIVE.REMOVE_DATA",
  "REMOVE_ERROR": "GIVE.REMOVE_ERROR",
  "REMOVE_SCHEDULE": "GIVE.REMOVE_SCHEDULE",
  "REMOVE_SCHEDULE_DATA": "GIVE.REMOVE_SCHEDULE_DATA",
  "SAVE_DATA": "GIVE.SAVE_DATA",
  "SAVE_SCHEDULES": "GIVE.SAVE_SCHEDULES",
  "SAVE_SCHEDULE_DATA": "GIVE.SAVE_SCHEDULE_DATA",
  "SET_ACCOUNTS": "GIVE.SET_ACCOUNTS",
  "SET_ERROR": "GIVE.SET_ERROR",
  "SET_ERRORS": "GIVE.SET_ERRORS",
  "SET_PROGRESS": "GIVE.SET_PROGRESS",
  "SET_RECOVERABLE_SCHEDULE": "GIVE.SET_RECOVERABLE_SCHEDULE",
  "SET_RECOVERABLE_SCHEDULES": "GIVE.SET_RECOVERABLE_SCHEDULES",
  "SET_REMINDER_DATE": "GIVE.SET_REMINDER_DATE",
  "SET_SAVED_ACCOUNT": "GIVE.SET_SAVED_ACCOUNT",
  "SET_STATE": "GIVE.SET_STATE",
  "SET_SUCCESS": "GIVE.SET_SUCCESS",
  "SET_TRANSACTION_DETAILS": "GIVE.SET_TRANSACTION_DETAILS",
  "SET_TRANSACTION_TYPE": "GIVE.SET_TRANSACTION_TYPE",
  "SET_USERID": "GIVE.SET_USERID",
  "STEP_PROGRESS": "GIVE.STEP_PROGRESS",
}
`;

exports[`loading 1`] = `
Object {
  "state": "loading",
  "type": "GIVE.SET_STATE",
}
`;

exports[`removeSchedule 1`] = `
Object {
  "id": 1,
  "type": "GIVE.REMOVE_SCHEDULE",
}
`;

exports[`reset 1`] = `
Object {
  "errors": Object {},
  "type": "GIVE.SET_ERRORS",
}
`;

exports[`save 1`] = `
Object {
  "data": Object {
    "personal": Object {
      "firstName": "James ",
    },
  },
  "type": "GIVE.SAVE_DATA",
}
`;

exports[`saveSchedule 1`] = `
Object {
  "schedule": 1,
  "type": "GIVE.SAVE_SCHEDULE_DATA",
}
`;

exports[`saveSchedules 1`] = `
Object {
  "recoverableSchedules": Object {},
  "type": "GIVE.SET_RECOVERABLE_SCHEDULES",
}
`;

exports[`setAccount 1`] = `
Object {
  "savedAccount": Object {
    "1": Object {
      "name": "test",
    },
  },
  "type": "GIVE.SET_SAVED_ACCOUNT",
}
`;

exports[`setAccounts 1`] = `
Object {
  "accounts": Array [
    Object {
      "1": Object {
        "name": "TEST",
      },
    },
  ],
  "type": "GIVE.SET_ACCOUNTS",
}
`;

exports[`setDetails 1`] = `
Object {
  "type": "GIVE.SET_TRANSACTION_DETAILS",
  "url": "http://example.com/TOKEN",
}
`;

exports[`setErrors 1`] = `
Object {
  "errors": Array [],
  "type": "GIVE.SET_ERRORS",
}
`;

exports[`setRecoverableSchedule 1`] = `
Object {
  "recoverableSchedule": Object {},
  "type": "GIVE.SET_RECOVERABLE_SCHEDULE",
}
`;

exports[`setReminder 1`] = `
Object {
  "reminderDate": "20201001",
  "type": "GIVE.SET_REMINDER_DATE",
}
`;

exports[`setState 1`] = `
Object {
  "state": "thinking",
  "type": "GIVE.SET_STATE",
}
`;

exports[`setTransactionType 1`] = `
Object {
  "transactionType": "default",
  "type": "GIVE.SET_TRANSACTION_TYPE",
}
`;

exports[`setUserId 1`] = `
Object {
  "type": "GIVE.SET_USERID",
  "userId": "1",
}
`;

exports[`sets progress 1`] = `
Object {
  "step": 1,
  "type": "GIVE.SET_PROGRESS",
}
`;

exports[`submit 1`] = `
Object {
  "state": "submit",
  "type": "GIVE.SET_STATE",
}
`;
